--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,19 @@ docker-compose.yml
 application/var/
 application/vendor
 application/app/config/parameters.yml
+application/app/config/parameters.yml
+application/build/
+/application/phpunit.xml
+/application/var/*
+!/application/var/cache
+/application/var/cache/*
+!application/var/cache/.gitkeep
+!application/var/logs
+application/var/logs/*
+!application/var/logs/.gitkeep
+!application/var/sessions
+/application/var/sessions/*
+!application/var/sessions/.gitkeep
+!application/var/SymfonyRequirements.php
+application/vendor/
+application/web/bundles/
