--- a/application/app/config/routing.yml
+++ b/application/app/config/routing.yml
@@ -1,7 +1,3 @@
 blog:
-    resource: "@BlogBundle/Resources/config/routing.yml"
-    prefix:   /
-
-app:
-    resource: "@AppBundle/Controller/"
-    type:     annotation
+    resource: "@BlogBundle/Resources/config/routing.api.v1.yml"
+    prefix:   /api/v1
