--- a/application/src/BlogBundle/Resources/config/doctrine/Post.orm.yml
+++ b/application/src/BlogBundle/Resources/config/doctrine/Post.orm.yml
@@ -2,11 +2,6 @@ BlogBundle\Entity\Post:
   type: entity
   table: bb_post
   repositoryClass: BlogBundle\Entity\EntityRepository\Doctrine\PostRepository
-  id:
-      id:
-          type: guid
-          generator:
-              strategy: AUTO
   fields:
       name:
           type: string
@@ -19,14 +14,6 @@ BlogBundle\Entity\Post:
           type: string
           length: 10
           nullable: false
-      createdAt:
-          type: datetime
-          nullable: false
-          column: created_at
-      updatedAt:
-          type: datetime
-          nullable: false
-          column: updated_at
   manyToOne:
       user:
           targetEntity: BlogBundle\Entity\User
@@ -35,6 +22,7 @@ BlogBundle\Entity\Post:
               referencedColumnName: id
       blog:
           targetEntity: BlogBundle\Entity\Blog
+          inversedBy: posts
           joinColumn:
               name: blog_id
               referencedColumnName: id
