--- a/application/src/BlogBundle/Resources/config/doctrine/UserProfile.orm.yml
+++ b/application/src/BlogBundle/Resources/config/doctrine/UserProfile.orm.yml
@@ -2,11 +2,6 @@ BlogBundle\Entity\UserProfile:
   type: entity
   table: bb_user_profile
   repositoryClass: BlogBundle\Entity\EntityRepository\Doctrine\UserProfileRepository
-  id:
-      id:
-          type: guid
-          generator:
-              strategy: AUTO
   fields:
       firstName:
           type: string
@@ -18,21 +13,13 @@ BlogBundle\Entity\UserProfile:
           length: 30
           nullable: false
           column: last_name
-      createdAt:
-          type: datetime
-          nullable: false
-          column: created_at
-      updatedAt:
-          type: datetime
-          nullable: false
-          column: updated_at
   oneToOne:
       user:
-#          targetEntity: BlogBundle\Entity\UserProfile
-#          mappedBy: user
-#          cascade:
-#              - persist
-#              - remove
+          targetEntity: BlogBundle\Entity\User
+          inversedBy: userProfile
+          cascade:
+              - persist
+              - remove
 
 
 #      lifecycleCallbacks:
