SAB: try post blog - {"message":"Error: Attempted to load class \"EntityEventManager\" from namespace \"BlogBundle\\Entity\".\nDid you forget a \"use\" statement for another namespace? with code: 0","status":500}

--- a/application/src/BlogBundle/Resources/config/di/event.listener.yml
+++ b/application/src/BlogBundle/Resources/config/di/event.listener.yml
@@ -1,1 +1,5 @@
 services:
+    blog_bundle.kernel.exception_listener:
+        class: BlogBundle\EventListener\Exception\KernelExceptionListener
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception }
