--- a/application/src/BlogBundle/Resources/config/doctrine/Post.orm.yml
+++ b/application/src/BlogBundle/Resources/config/doctrine/Post.orm.yml
@@ -32,7 +32,6 @@ BlogBundle\Entity\Post:
           mappedBy: post
           orderBy: {'createdAt': 'ASC'}
 
-
-#      lifecycleCallbacks:
-#          prePersist: [setCreatedAtValue, setUpdatedAtValue]
-#          preUpdate: [setUpdatedAtValue]
+  lifecycleCallbacks:
+      prePersist: [setCreatedAtValue, setUpdatedAtValue]
+      preUpdate: [setUpdatedAtValue]
