--- a/application/src/BlogBundle/Resources/config/doctrine/User.orm.yml
+++ b/application/src/BlogBundle/Resources/config/doctrine/User.orm.yml
@@ -29,7 +29,6 @@ BlogBundle\Entity\User:
               - persist
               - remove
 
-
-#      lifecycleCallbacks:
-#          prePersist: [setCreatedAtValue, setUpdatedAtValue]
-#          preUpdate: [setUpdatedAtValue]
+  lifecycleCallbacks:
+      prePersist: [setCreatedAtValue, setUpdatedAtValue]
+      preUpdate: [setUpdatedAtValue]
