--- a/application/src/BlogBundle/Resources/config/doctrine/UserProfile.orm.yml
+++ b/application/src/BlogBundle/Resources/config/doctrine/UserProfile.orm.yml
@@ -21,7 +21,8 @@ BlogBundle\Entity\UserProfile:
               - persist
               - remove
 
+  lifecycleCallbacks:
+      prePersist: [setCreatedAtValue, setUpdatedAtValue]
+      preUpdate: [setUpdatedAtValue]
 
-#      lifecycleCallbacks:
-#          prePersist: [setCreatedAtValue, setUpdatedAtValue]
-#          preUpdate: [setUpdatedAtValue]
+
