--- a/application/composer.json
+++ b/application/composer.json
@@ -24,7 +24,8 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "doctrine/migrations": "^1.4",
         "friendsofsymfony/oauth-server-bundle": "^1.5",
-        "doctrine/doctrine-migrations-bundle": "^1.2"
+        "doctrine/doctrine-migrations-bundle": "^1.2",
+        "symfony/serializer": "^3.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
