SAB: reworked entity listeners. need create listeners and test

--- a/application/src/BlogBundle/Resources/config/di/entity.event.manager.yml
+++ b/application/src/BlogBundle/Resources/config/di/entity.event.manager.yml
@@ -1,6 +1,6 @@
 services:
 
     blog_bundle.entity.event.manager:
-        class: BlogBundle\Entity\EntityEventManager
+        class: BlogBundle\Entity\EntityEventManager\EntityEventManager
         arguments:
             - "@event_dispatcher"
