--- a/application/src/BlogBundle/Resources/config/doctrine/Post.orm.yml
+++ b/application/src/BlogBundle/Resources/config/doctrine/Post.orm.yml
@@ -1,7 +1,7 @@
 BlogBundle\Entity\Post:
   type: entity
   table: bb_post
-  repositoryClass: BlogBundle\Entity\EntityRepository\Doctrine\PostRepository
+  repositoryClass: BlogBundle\EntityManagement\EntityRepository\Doctrine\PostRepository
   fields:
       name:
           type: string
